[tool.poetry]
name = "heineken-crawler"
version = "1.0.0"
description = ""
authors = ["nonylene <nonylene@kmc.gr.jp>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "*"
lxml = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
